Fix sidebar on mobile usage

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,20 @@
     --input: 12 30% 18%;
     --ring: 12 85.6% 19%;
     --radius: 0.5rem;
+    /* These are all for test */
+    --sidebar-background: 12 100% 95%;
+    --sidebar-foreground: 12 5% 0%;
+    --sidebar-primary: 12 85.6% 19%;
+    --sidebar-primary-foreground: 0 0% 100%;
+    --sidebar-accent: -26 30% 80%;
+    --sidebar-accent-foreground: 12 5% 10%;
+    --sidebar-border: 12 30% 50%;
+    --sidebar-ring: 12 85.6% 19%;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
   }
   .dark {
     --background: 12 50% 5%;
@@ -46,6 +60,20 @@
     --input: 12 30% 18%;
     --ring: 12 85.6% 19%;
     --radius: 0.5rem;
+    /* These are all for test */
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
+    --sidebar-background: 12 50% 5%;
+    --sidebar-foreground: 12 5% 90%;
+    --sidebar-primary: 12 85.6% 19%;
+    --sidebar-primary-foreground: 0 0% 100%;
+    --sidebar-accent: -26 30% 15%;
+    --sidebar-accent-foreground: 12 5% 90%;
+    --sidebar-border: 12 30% 18%;
+    --sidebar-ring: 12 85.6% 19%;
   }
 }
 
